bpo-34641: Further restrict the LHS of keyword argument function call syntax.